For Countries with provinces select bar will be presented. Saving and fetching data bugs fixed. Responsive style for vue elements.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,5 +7,6 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-@import 'parts/cases';
 @import 'parts/global';
+@import 'parts/cases';
+@import 'parts/country';
