--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10903,7 +10903,78 @@ a.text-dark:focus {
   }
 }
 
-.case-table,
+#app {
+  margin: 0 auto;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  padding: 20px 0;
+  width: 80%;
+}
+
+@media screen and (max-width: 576px) {
+  .center {
+    width: 100%;
+  }
+}
+
+.loader {
+  margin: 0 auto;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 0.5s ease infinite;
+          animation: spin 0.5s ease infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    border-top: 16px solid rgba(253, 0, 0, 0.2);
+  }
+
+  100% {
+    transform: rotate(360deg);
+    border-top: 16px solid rgba(52, 152, 219, 0.6);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    border-top: 16px solid rgba(253, 0, 0, 0.2);
+  }
+
+  100% {
+    transform: rotate(360deg);
+    border-top: 16px solid rgba(52, 152, 219, 0.6);
+  }
+}
+
+.no-data {
+  text-align: center;
+  font-size: 20pt;
+  margin-top: 10px;
+  text-transform: uppercase;
+}
+
+.cases-province-select {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.cases-table {
+  margin: 0 auto;
+  width: 95%;
+}
+
+.cases-table,
 th,
 tr,
 td {
@@ -10913,40 +10984,84 @@ td {
 th,
 td {
   padding: 5px 10px;
+  text-align: center;
+}
+
+@media screen and (max-width: 576px) {
+  th,
+  td {
+    padding: 1px;
+  }
+}
+
+.cases-loading {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 20pt;
 }
 
 .cases-diagrams canvas {
-  max-width: 90%;
+  max-width: 70%;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 768px) {
+  .cases-diagrams canvas {
+    max-width: 95%;
+    box-sizing: border-box;
+  }
 }
 
 .diagram-title {
   text-align: center;
   margin: 10px 0;
-  font-size: 32pt;
+  font-size: 28pt;
+}
+
+@media screen and (max-width: 768px) {
+  .diagram-title {
+    font-size: 24pt;
+  }
 }
 
 @media screen and (max-width: 576px) {
   .diagram-title {
-    font-size: 20pt;
+    font-size: 18pt;
   }
 }
 
-#app {
-  margin: 0 auto;
+.country-presentation {
+  text-align: center;
 }
 
-.center {
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  min-height: 100vh;
-  width: 80%;
+.country-presentation .country-title {
+  font-weight: bold;
+  font-size: 42pt;
+}
+
+@media screen and (max-width: 768px) {
+  .country-presentation .country-title {
+    font-size: 30pt;
+  }
 }
 
 @media screen and (max-width: 576px) {
-  .center {
-    width: 100%;
+  .country-presentation .country-title {
+    font-size: 24pt;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .country-presentation .country-title .country-flag {
+    width: 60px;
+    height: 40px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .country-presentation .country-title .country-flag {
+    width: 40px;
+    height: 30px;
   }
 }
 
