--- a/resources/sass/parts/global.scss
+++ b/resources/sass/parts/global.scss
@@ -3,12 +3,29 @@
 }
 
 .center {
-    margin: 0 auto;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     min-height: 100vh;
+    padding: 20px 0;
     width: 80%;
     @media screen and (max-width: $small) {
         width: 100%;
+    }
+}
+.loader {
+    margin: 0 auto;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 0.5s ease infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg);
+        border-top: 16px solid rgba(253, 0, 0, 0.2);
+    }
+    100% { transform: rotate(360deg);
+        border-top: 16px solid rgb(52, 152, 219, 0.6);
     }
 }
