--- a/resources/sass/parts/global.scss
+++ b/resources/sass/parts/global.scss
@@ -12,6 +12,7 @@
         width: 100%;
     }
 }
+
 .loader {
     margin: 0 auto;
     border: 16px solid #f3f3f3;
@@ -22,10 +23,12 @@
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg);
+    0% {
+        transform: rotate(0deg);
         border-top: 16px solid rgba(253, 0, 0, 0.2);
     }
-    100% { transform: rotate(360deg);
+    100% {
+        transform: rotate(360deg);
         border-top: 16px solid rgb(52, 152, 219, 0.6);
     }
 }
