--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10974,24 +10974,24 @@ a.text-dark:focus {
   width: 95%;
 }
 
-.cases-table,
-th,
-tr,
-td {
-  border: 1px solid black;
-}
-
-th,
-td {
+.cases-table th,
+.cases-table td {
   padding: 5px 10px;
   text-align: center;
 }
 
 @media screen and (max-width: 576px) {
-  th,
-  td {
+  .cases-table th,
+  .cases-table td {
     padding: 1px;
   }
+}
+
+.cases-table,
+th,
+tr,
+td {
+  border: 1px solid black;
 }
 
 .cases-loading {
@@ -11106,5 +11106,126 @@ td {
 
 .flex-col {
   flex-direction: column;
+}
+
+.summary-empty {
+  text-align: center;
+  font-size: 20pt;
+}
+
+.summary-title,
+.global-summary {
+  background-color: #292729;
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.summary-title {
+  font-size: 50pt;
+  padding: 10px 0;
+}
+
+@media screen and (max-width: 768px) {
+  .summary-title {
+    font-size: 40pt;
+  }
+}
+
+.global-last-updated {
+  background-color: #292729;
+  color: #fff;
+  margin: 5px auto;
+  padding: 5px 20px;
+  font-size: 8pt;
+}
+
+.global-summary {
+  padding: 50px 0;
+  margin-bottom: 20px;
+}
+
+.global-summary .summary-global-data-pair {
+  display: inline-flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 40%;
+}
+
+@media screen and (max-width: 768px) {
+  .global-summary .summary-global-data-pair {
+    width: 100%;
+  }
+}
+
+.global-summary .summary-global-data-pair .summary-global-title,
+.global-summary .summary-global-data-pair .summary-global-new-title {
+  font-size: 25pt;
+  padding: 5px;
+  margin: 0 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .global-summary .summary-global-data-pair .summary-global-title,
+  .global-summary .summary-global-data-pair .summary-global-new-title {
+    font-size: 18pt;
+    border-radius: 5px;
+    padding: 10px 0;
+  }
+}
+
+.global-summary .summary-global-data-pair .summary-global-title {
+  background-color: #911161;
+}
+
+.global-summary .summary-global-data-pair .summary-global-new-title {
+  background-color: #112d91;
+}
+
+.global-summary .summary-global-data-pair .summary-global-cases {
+  font-size: 22pt;
+  margin: 10px 0;
+}
+
+@media screen and (max-width: 768px) {
+  .global-summary .summary-global-data-pair .summary-global-cases {
+    font-size: 18pt;
+  }
+}
+
+.summary-table,
+th,
+tr,
+td {
+  border: 1px solid black;
+}
+
+.summary-table {
+  background-color: #292729;
+  color: #fff;
+}
+
+.summary-table th,
+.summary-table td {
+  padding: 5px 10px;
+  text-align: center;
+}
+
+@media screen and (max-width: 576px) {
+  .summary-table th,
+  .summary-table td {
+    padding: 1px;
+  }
+}
+
+.summary-table th .sort-link,
+.summary-table td .sort-link {
+  display: block;
+}
+
+.summary-table th .sort-link:hover,
+.summary-table td .sort-link:hover {
+  text-decoration: none;
 }
 
