Index page design update. Summary table empty data filtering for new and format change

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -18,6 +18,16 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
+// Custom colors;
+$confirmed:#EE0A0A;
+$deaths:#000;
+$recovered: #10cb10;
+$active:#055EF6;
+$summary-dark: #292729;
+$link-blue: #1e92de;
+$link-hover-blue: #00c;
+$link-hover-background: #c3c33a;
+
 // Media queries
 
 $small: 576px;
