--- a/resources/sass/parts/cases.scss
+++ b/resources/sass/parts/cases.scss
@@ -5,24 +5,6 @@
     text-transform: uppercase;
 }
 
-.cases-table {
-    margin: 0 auto;
-    width: 95%;
-
-    th, td {
-        padding: 5px 10px;
-        text-align: center;
-        @media screen and (max-width: $small) {
-            padding: 1px;
-        }
-    }
-}
-
-.cases-table, th, tr, td {
-    border: 1px solid black;
-}
-
-
 .cases-loading {
     margin-top: 20px;
     text-align: center;
@@ -30,6 +12,27 @@
 }
 
 .cases-diagrams {
+    .interval-filter {
+        margin-top: 10px;
+        width: 100%;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        padding: 0 5px;
+
+        div {
+            &:last-child {
+                @media screen and (min-width: $medium) {
+                    margin-left: 10px;
+                }
+            }
+
+            input {
+                text-align: center;
+            }
+        }
+    }
+
     canvas {
         max-width: 70%;
         margin: 0 auto;
