--- a/resources/sass/parts/global.scss
+++ b/resources/sass/parts/global.scss
@@ -8,6 +8,7 @@
     min-height: 100vh;
     padding: 20px 0;
     width: 80%;
+    box-sizing: border-box;
     @media screen and (max-width: $medium) {
         width: 100%;
     }
