--- a/resources/sass/parts/cases.scss
+++ b/resources/sass/parts/cases.scss
@@ -34,11 +34,14 @@
     }
 
     canvas {
-        max-width: 70%;
+        max-width: 50%;
         margin: 0 auto;
+        box-sizing: border-box;
         @media screen and (max-width: $medium) {
             max-width: 95%;
-            box-sizing: border-box;
+        }
+        @media screen and (max-width: $large) {
+            max-width: 80%;
         }
     }
 
