Tabs for diagrams

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -26,7 +26,9 @@ $active: #055EF6;
 $summary-dark: #292729;
 $link-blue: #1e92de;
 $link-hover-blue: #00c;
-$link-hover-background: #c3c33a;
+$link-hover-background: #d7d79d;
+$link-current-background: #d7d4d4;
+$link-current: #4c4c53;
 
 // Media queries
 
