--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,6 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
 
 // Variables
 @import 'variables';
@@ -13,3 +14,4 @@
 @import 'parts/errors';
 @import 'parts/summary';
 @import 'parts/table';
+@import 'parts/tab';
