Summary confirmed and deaths per Capita columns

--- a/resources/sass/parts/global.scss
+++ b/resources/sass/parts/global.scss
@@ -34,3 +34,21 @@
         border-top: 16px solid rgb(52, 152, 219, 0.6);
     }
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
