--- a/resources/sass/parts/summary.scss
+++ b/resources/sass/parts/summary.scss
@@ -96,6 +96,7 @@
             margin: 10px 0;
             @media screen and (max-width: $medium) {
                 font-size: 12pt;
+                font-weight: 700;
                 color: $summary-dark;
                 margin: 0;
             }
