Global cases slider and diagram

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -21,7 +21,7 @@ $cyan: #6cb2eb;
 // Custom colors;
 $confirmed: #EE0A0A;
 $deaths: #000;
-$recovered: #10cb10;
+$recovered: #0d9820;
 $active: #055EF6;
 $summary-dark: #292729;
 $link-blue: #1e92de;
